sh/yaml/deploy-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    app: zookeepe
spec:
  ports:
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  clusterIP: None
  selector:
    app: zookeeper
---
kind: StatefulSet
apiVersion: apps/v1beta1
metadata: 
  name: zookeeper
spec: 
  replicas: 3
  serviceName: zookeeper
  template:
    metadata: 
      labels: 
        app: zookeeper
    spec:
      securityContext: 
        runAsUser: 1000
        fsGroup: 1000
      containers:
      - name: zookeeper
        image: "smartlab/zookeeper:3.4.11"
        imagePullPolicy: Always
        ports: 
        - containerPort: 2181
          name: client
        - containerPort: 2888
          name: server
        - containerPort: 3888
          name: leader-election
        volumeMounts: 
        - mountPath: /zk_data
          name: data
        - mountPath: /zk_datalog
          name: datalog
        readinessProbe:
          exec:
            command:
            - bin/zkOK.sh
          initialDelaySeconds: 10
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - bin/zkOK.sh
          initialDelaySeconds: 10
          timeoutSeconds: 5
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
  - metadata:
      name: datalog
    spec:
      accessModes: 
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
