sh/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  labels:
    name: zookeeper
spec:
  type: NodePort
  ports:
  - port: 2888
    name: server
  - port: 3888
    name: leader-election
  - port: 2181
    nodePort: 32181
    name: client
  ClusterIP: none
  selector:
    app: zookeeper
