sh/yaml/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: zk-frontend
  labels:
    pattern: zk-mpt
spec:
  host: zookeeper.apps.mpt.mp.br
  port:
    targetPort: 2181
  to:
    kind: Service
    name: zookeeper
